# PCIRO-AI-Seekho

./: CIRO-readme.md  CIRO_Project_Document.docx  CLAUDE.md  DESIGN.md  HOW_IT_WORKS.md  MOBILE_APP.md  PCIRO-readme.md  README.md  skills-lock.json
.cursor/rules/: token-brevity.mdc
apps/mobile/: .env  .env.example  App.tsx  DESIGN_SYSTEM.md  README.md  TEST_FLOW.md  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
apps/mobile/android/: gradlew  gradlew.bat
apps/mobile/android/app/: build.gradle
apps/mobile/patches/: react-native-gesture-handler+2.31.2.patch
apps/mobile/scripts/: patch-react-native-svg.js
apps/mobile/src/api/: client.ts  commanderApi.ts  crisisApi.ts  devicesApi.ts  pollCrisis.ts  reportApi.ts
apps/mobile/src/components/: AgentTimeline.tsx  CorroborationMeter.tsx  CrisisCard.tsx  CrisisTypeIcon.tsx  IncidentBanner.tsx  LoadingSpinner.tsx  ScoreBar.tsx  SeverityBadge.tsx  SimulationDiff.tsx  TraceLog.tsx
apps/mobile/src/constants/: config.ts  islamabadZones.ts  mapStyle.ts  theme.ts  (+1 more)
ciro/: .env  README.md  crises.json  pyproject.toml  report_resp.json
ciro/src/ciro/: llm_config.py  main.py
ciro/src/ciro/api/: __init__.py  app.py  events.py  flow_service.py  pipeline.py  schemas.py  server.py  store.py
ciro/src/ciro/crews/analysis_crew/: analysis_crew.py
ciro/src/ciro/crews/analysis_crew/config/: agents.yaml  tasks.yaml
ciro/src/ciro/crews/ingest_crew/: ingest_crew.py
ciro/src/ciro/crews/ingest_crew/config/: agents.yaml  tasks.yaml
ciro/src/ciro/crews/response_crew/: response_crew.py
ciro/src/ciro/crews/response_crew/config/: agents.yaml  tasks.yaml
ciro/src/ciro/schema/: __init__.py  models.py
ciro/src/ciro/tools/: __init__.py  alert_dispatcher.py  corroboration_engine.py  impact_assessor.py  roman_urdu_parser.py  weather_fetcher.py
ciro/tests/: test_api.py  test_llm_config.py  test_open_meteo_integration.py  test_roman_urdu_parser.py
(+28 files in other folders)
