[project]
name = "ciro"
version = "0.1.0"
description = "ciro using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.4",
    "requests>=2.31.0",
    "pydantic>=1.10.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
kickoff = "ciro.main:kickoff"
run_crew = "ciro.main:kickoff"
plot = "ciro.main:plot"
run_with_trigger = "ciro.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
